Fix: background images cropping - css improvements for cta input

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,3 @@
 $primaryText: hsl(180, 66%, 49%);
 $secondaryText: hsl(250, 4%, 73%);
+$error: hsl(0, 87%, 67%);
