--- a/scss/bottomCta.module.scss
+++ b/scss/bottomCta.module.scss
@@ -7,6 +7,8 @@
   color: white;
   background: hsl(257, 27%, 26%);
   background-image: url("../../public/images/bg-boost-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 
   &__btnContainer {
     width: fit-content;
