--- a/scss/cta.module.scss
+++ b/scss/cta.module.scss
@@ -1,35 +1,46 @@
+@use "variables" as var;
+
 .cta {
   position: relative;
   transform: translateY(50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  background: hsl(257, 27%, 26%);
+  background-color: hsl(257, 27%, 26%);
   background-image: url("../../public/images/bg-shorten-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
   width: fit-content;
   padding: 2.95rem 4rem;
   border-radius: 1rem;
   margin: 0 auto;
 
   &__input {
+    outline: none;
     font-family: inherit;
     font-weight: inherit;
     font-size: inherit;
     border: none;
     padding-left: 2rem;
     width: 48rem;
+    border: 0.15rem white solid;
     border-radius: 1rem;
     height: 4rem;
     background: white;
-  }
 
-  &__btnContainer {
-    margin-left: 1.5rem;
+    &:focus {
+      border: 0.15rem var.$primaryText solid;
+    }
+
+    &_input {
+      border: 0.15rem var.$error solid;
+    }
   }
 }
 
 #cta {
   &__btn {
+    margin-left: 1.5rem;
     height: 4rem;
     width: 11.75rem;
     border-radius: 1rem;
